--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.13.1
 amqp==5.2.0
 annotated-types==0.6.0
 anyio==4.2.0
+asttokens==2.4.1
 async-timeout==4.0.3
 asyncpg==0.29.0
 billiard==4.2.0
@@ -13,6 +14,9 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+comm==0.2.1
+debugpy==1.8.1
+decorator==5.1.1
 fastapi==0.109.2
 flower==2.0.1
 greenlet==3.0.3
@@ -21,17 +25,25 @@ httptools==0.6.1
 humanize==4.9.0
 idna==3.6
 kombu==5.3.5
+loguru==0.7.2
 Mako==1.3.2
 MarkupSafe==2.1.5
+nest-asyncio==1.6.0
+packaging==23.2
+platformdirs==4.2.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
+psutil==5.9.8
+pure-eval==0.2.2
 pydantic==2.6.1
 pydantic-settings==2.1.0
 pydantic_core==2.16.2
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 pytz==2024.1
+pywin32==306
 PyYAML==6.0.1
+pyzmq==25.1.2
 redis==5.0.1
 requests==2.31.0
 six==1.16.0
@@ -47,3 +59,4 @@ vine==5.1.0
 watchfiles==0.21.0
 wcwidth==0.2.13
 websockets==12.0
+win32-setctime==1.1.0
