--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,5 @@ app/celery/temp.py
 app/celery/celerybeat-schedule.bak
 app/celery/celerybeat-schedule.dat
 app/celery/celerybeat-schedule.dir
+
+reports/*
