--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ anyio==4.2.0
 asttokens==2.4.1
 async-timeout==4.0.3
 asyncpg==0.29.0
+bcrypt==4.0.1
 billiard==4.2.0
 celery==5.3.6
 certifi==2024.2.2
@@ -16,8 +17,10 @@ click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
 comm==0.2.1
+cryptography==44.0.0
 debugpy==1.8.1
 decorator==5.1.1
+ecdsa==0.19.0
 et-xmlfile==1.1.0
 fastapi==0.109.2
 flower==2.0.1
@@ -39,22 +42,27 @@ numpy==1.26.4
 openpyxl==3.1.2
 packaging==23.2
 pandas==2.2.1
+passlib==1.7.4
 platformdirs==4.2.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
 psutil==5.9.8
 pure-eval==0.2.2
+pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.6.1
 pydantic-settings==2.1.0
 pydantic_core==2.16.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-jose==3.3.0
+python-multipart==0.0.20
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==25.1.2
 redis==5.0.1
 requests==2.31.0
+rsa==4.9
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.26
