--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ pycparser==2.22
 pydantic==2.6.1
 pydantic-settings==2.1.0
 pydantic_core==2.16.2
+PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.3.0
