--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,19 +2,19 @@ stages:
   - build
   - deploy
 
-build_image:
-  interruptible: true
-  image: 
-    name: gcr.io/kaniko-project/executor:v1.23.2-debug
-    entrypoint: [""]
-  stage: build
-  tags: [docker]
-  script:
-   - cat $docker_hub > /kaniko/.docker/config.json
-   - /kaniko/executor
-      --context . 
-      --dockerfile=Dockerfile 
-      --destination fefuboard/amelia-issues-backend-dev:latest
+# build_image:
+#   interruptible: true
+#   image: 
+#     name: gcr.io/kaniko-project/executor:v1.23.2-debug
+#     entrypoint: [""]
+#   stage: build
+#   tags: [docker]
+#   script:
+#    - cat $docker_hub > /kaniko/.docker/config.json
+#    - /kaniko/executor
+#       --context . 
+#       --dockerfile=Dockerfile 
+#       --destination fefuboard/amelia-issues-backend-dev:latest
 
 
 deploy_job:
