--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,11 +22,10 @@ deploy_job:
   image: docker
   tags: [cloud2]
   before_script:
-   - docker ps -a
-  #  --tlsverify \
-  #       --tlscacert=$DOCKER_CA_CLOUD2 \
-  #       --tlscert=$DOCKER_CERT_CLOUD2 \
-  #       --tlskey=$DOCKER_KEY_CLOUD2 \
-  #       -H=172.17.0.15:2376
+   - docker --tlsverify \
+        --tlscacert=$DOCKER_CA_CLOUD2 \
+        --tlscert=$DOCKER_CERT_CLOUD2 \
+        --tlskey=$DOCKER_KEY_CLOUD2 \
+        -H=172.17.0.15:2376 version
   script:
     - echo "Deploy job"
