--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ deploy_job:
   image: docker
   tags: [cloud2]
   before_script:
+   - cat $DOCKER_CA_CLOUD2
    - docker --tlsverify \
         --tlscacert=$DOCKER_CA_CLOUD2 \
         --tlscert=$DOCKER_CERT_CLOUD2 \
