--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,5 +48,7 @@ deploy_job:
     - echo "SSH setup complete"s
   script:
     - echo "Deploy job"
+    - chmod 400 /builds/parhom/amelia-issues-sync-data.tmp/ID_RSA
+    - ls -la /builds/parhom/amelia-issues-sync-data.tmp/ID_RSA
     - ssh -v -i $ID_RSA -o StrictHostKeyChecking=no $SSH_USER@$HOST_CLOUD2 "pwd && ls -la"
 
